tests/errors/for_removed.dang
# `for` is no longer a keyword; repetition is the `loop` builtin.
for {
  break
}
